1.0.0: Initial version
1.0.1: Add timeout for message callbacks
1.0.2: Don't wait 100ms if no callback available
       Add Mac OS support
1.0.3: Remove global reactor import for Mac OS
1.0.4: Remove double fork completely for Mac OS
1.0.5: Update to newest python-libusb1 version (thanks to vpelletier)
       Remove possible memory leak
1.0.6: Remove faulty libusb locking
1.0.7: Fix handling of incomplete packets
1.0.8: Break a reference cycle between USBDevice and USBTransfer objects
       Add date to log output
       Fix stack ID routing for enumerate with multiple connected stacks
       Add --version commandline argument
1.0.9: Reduce Windows and Mac OS installer size
       Avoid race condition when enumerating USB devices on Linux
       Use more expressive log file name and correct line endings on Windows
       Don't cancel pending USB transfers to avoid segfault in libusb on USB hotunplug on Linux
       Update libsub to make USB 3.0 work on Windows